Utilisation de paper-plugin.yml